Fixed button size on small screens

--- a/bookshelf/src/assets/styles/bookLanding/bookDetails.css
+++ b/bookshelf/src/assets/styles/bookLanding/bookDetails.css
@@ -91,6 +91,19 @@
     .book-information p {
         font-size: 1.2rem;
     }
+    .buttons-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 90%;
+        height: 50px;
+        margin: auto;
+        gap: 10px;
+    }
+    .buttons-container a {
+        font-size: 1rem;
+        padding: 5px;
+    }
 }
 
 @media screen and (max-width: 300px) {
